fix map overflow

--- a/sass/pages/_map.scss
+++ b/sass/pages/_map.scss
@@ -9,6 +9,6 @@
   top: -2rem;
   position: absolute;
   filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(50deg) saturate(1000%) contrast(0.8);
-  max-width: 95%;
+  max-width: 90%;
   z-index: -4;
 }
